@startuml
namespace traefik_plugin_metrics {
    class Config << (S,Aquamarine) >> {
        + ClientIP string
        + ClientBucket string
        + ClientMeasurement string

    }
    class metrics << (S,Aquamarine) >> {
        + Name string
        + Next http.Handler
        + Config *Config

        - logger() http.Handler

        + ServeHTTP(rw http.ResponseWriter, req *http.Request) 

    }
}


"traefik_plugin_metrics.metrics""uses" o-- "http.Handler"
"traefik_plugin_metrics.metrics""uses" o-- "traefik_plugin_metrics.Config"

@enduml
